--- a/style.css
+++ b/style.css
@@ -16,12 +16,40 @@
 main {
     width: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+}
+
+h1 {
+    margin-top: 40px;
+}
+
+main > section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+img {
+    width: 135%;
+    margin-top: 50px;
+    border: 1px solid black;
+}
+
+p {
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+button {
+    width: 75%;
+    height: 4rem;
+    text-decoration: none;
 }
 
 form {
@@ -89,29 +117,12 @@ label:last-of-type {
     margin-bottom: 70px;
 }
 
-@media screen and (min-width: 768px) {
-    fieldset {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-content: center;
-        align-items: center;
-        height: 110vh;
-        padding-bottom: 140px;
-        font-size: 1.4rem;
-        border: 0;
-        justify-content: space-evenly;
-    }
-
-    label,
-    legend {
-        height: 30%;
+@media screen and (min-width: 700px) {
+    #botonEnviar {
         width: 50%;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 15px;
-        margin-right: 40px;
+        height: 4rem;
+        background-color: whitesmoke;
+        margin-bottom: 70px;
+        font-size: 1.2rem;
     }
 }
