--- a/style.css
+++ b/style.css
@@ -23,10 +23,12 @@ main {
     flex-wrap: wrap;
     align-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 h1 {
     margin-top: 40px;
+    font-size: 4rem;
 }
 
 main > section {
@@ -47,9 +49,18 @@ p {
 }
 
 button {
-    width: 75%;
-    height: 4rem;
+    width: 50%;
+    height: 3.4rem;
+    background-color: whitesmoke;
+    margin-bottom: 70px;
+}
+
+button > a {
     text-decoration: none;
+    color: black;
+    font-family: 'Titillium Web';
+    font-style: italic;
+    font-size: large;
 }
 
 form {
@@ -111,10 +122,8 @@ label:last-of-type {
 
 /* Ids */
 #botonEnviar {
-    width: 50%;
-    height: 60%;
-    background-color: whitesmoke;
-    margin-bottom: 70px;
+    width: 75%;
+    height: 4rem;
 }
 
 @media screen and (min-width: 700px) {
